Re-add --enable-native-access to Surefire config