@@ -79,6 +79,9 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xs
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-surefire-plugin</artifactId>
         <version>3.3.1</version>
+        <configuration>
+          <argLine>--enable-native-access io.kojan.javadeptools.rpm</argLine>
+        </configuration>
       </plugin>
     </plugins>
   </build>
